[package]
name = "snowcap-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
colored = "2.1.0"
profiling = "1.0"
puffin = "0.19"
puffin_http = "0.16"
snowcap = { version = "0.1.5-dev", path = "../snowcap" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracy-client = "0.17.4"

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-tracy = ["profiling/profile-with-tracy"]
